--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script type="module" src="/src/main.tsx"></script><script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CLFJG4V49N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CLFJG4V49N');
+</script>
 <script type="text/javascript">
   (function(){
      emailjs.init({
